# databricks-hackathon

./: .gitignore
backend/: .env.example  config.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
backend/routers/: chat.py  genie.py  tasks.py
backend/services/: agent_bricks.py  checkpoint.py  delta_store.py  genie_chat.py  orchestrator.py
docs/brainstorms/: 2026-03-11-workbench-agent-platform-brainstorm.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/board/: BoardView.tsx  Column.tsx  TaskCard.tsx
frontend/src/components/chat/: AgentTaskCard.tsx  ApprovalCard.tsx  ChatInput.tsx  ChatView.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/shared/: AgentAvatar.tsx  StatusBadge.tsx
frontend/src/store/: taskStore.ts
scripts/: dev.sh  setup_databricks.py
